--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 	</head>
 	<body>
 		<div>
-			<spark-line ng-model="New Delhi"></spark-line>
+			City: <input type="text" ng-model="city" splaceholder="Enter your city">
+			<spark-line ng-model="city"></spark-line>
 		</div>
 		<!-- All javascript dependencies-->
 	</body>
+	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js" ></script>
 	<script type="text/javascript" src="app/js/weatherMaps.js"></script>
 </html>
 
